[project]
name = "bug-free-guacamole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.13.0",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-marshmallow>=1.4.0",
    "flask-migrate>=4.1.0",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
]
